--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "emailjs-com": "^2.6.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-particle-image": "^1.0.2",
+    "react-particles": "^2.12.2",
     "react-scripts": "^5.0.1",
-    "smooth-scroll": "^16.1.3"
+    "react-toastify": "^9.1.3",
+    "react-tsparticles": "^2.12.2",
+    "smooth-scroll": "^16.1.3",
+    "tsparticles-slim": "^2.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
